修改体系结构文档

--- a/doc/md/体系结构描述文档/体系结构描述文档.md
+++ b/doc/md/体系结构描述文档/体系结构描述文档.md
@@ -746,70 +746,69 @@
 
 <table>
 <tr>
-<td colspan ="3">提供的服务（供接口）</td>
+<td colspan ="3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;提供的服务（供接口）</td>
 </tr>
 <tr>
 <td rowspan="3">VIP.newVIP</td>
-<td>语法</td> <td>public String newVIP()</td>
+<td>语法</td> <td> public String newVIP(String telephone);</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>无</td>
+<td>前置条件</td> <td>用户选择新建客户</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回新会员的编号</td>
+<td>后置条件</td><td>系统显示客户电话和编号</td>
 </tr>
 <tr>
-<td rowspan="3">VIP.addVIP</td>
-<td>语法</td> <td>public void addVIP(VIPVO vo)</td>
+<td rowspan="3">VIP.findVIP</td>
+<td>语法</td> <td> public List<VIPVO> findVIP(String info,String type);</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>已填好新会员的必要信息，并且输入都合法</td>
+<td>前置条件</td> <td>用户输入信息模糊查找客户</td>
 </tr>
 <tr>
-<td>后置条件</td><td>持久化保存新会员信息</td>
+<td>后置条件</td><td>系统显示模糊查找后符合要求的客户列表</td>
 </tr>
 <tr>
 <td rowspan="3">VIP.deleteVIP</td>
-<td>语法</td> <td>public boolean deleteVIP(String id)</td>
+<td>语法</td> <td> public ResultMessage deleteVIP(String id);</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>无</td>
+<td>前置条件</td> <td>用户选择删除客户</td>
 </tr>
 <tr>
-<td>后置条件</td><td>持久化删除会员信息，并返回是否删除成功</td>
+<td>后置条件</td><td>系统更新客户列表</td>
 </tr>
 <tr>
-<td rowspan="3">VIP.saveVIP</td>
-<td>语法</td> <td>public void saveVIP(VIPVO vo)</td>
+<td rowspan="3">VIP.modifyVIP</td>
+<td>语法</td> <td> public ResultMessage modifyVIP(VIPVO vo);</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>修改的会员信息都合法</td>
+<td>前置条件</td> <td>用户选择修改客户信息</td>
 </tr>
 <tr>
-<td>后置条件</td><td>持久化更新会员信息</td>
+<td>后置条件</td><td>系统更新客户信息</td>
 </tr>
 <tr>
-<td rowspan="3">VIP.searchVIP</td>
-<td>语法</td> <td>public Map<String,String> searchVIP(String id, String name)</td>
+<td rowspan="3">VIP.initAndSaveVIP</td>
+<td>语法</td> <td>public ResultMessage initAndSaveVIP(VIPVO vo);</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>无</td>
+<td>前置条件</td> <td>用户保存已初始化的客户信息</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回所有符合输入条件的会员的列表(每项为会员编号和名称)</td>
+<td>后置条件</td><td>系统更新客户信息</td>
 </tr>
 <tr>
-<td rowspan="3">VIP.getVIP</td>
-<td>语法</td> <td>public VIPVO getVIP(String id)</td>
+<td rowspan="3">VIP.getVIPInfo</td>
+<td>语法</td> <td>public List<VIPVO> getVIPInfo();</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>无</td>
+<td>前置条件</td><td>用户选择查看所有客户信息</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回要查询的会员信息</td>
+<td>后置条件</td><td>系统显示所有客户信息</td>
 </tr>
 </table>
-  
 <table>
 <tr>
 <td colspan = "2">需要的服务（需接口）</td>
@@ -818,25 +817,26 @@
 <td>服务名</td> <td>服务</td>
 </tr>
 <tr>
-<td>VIPDataService.getNewID() </td> <td>返回新会员的编号</td>
+<td>VIPDataService.newVIP(String telephone)</td> <td>新建会员</td>
 </tr>
 <tr>
-<td>VIPDataService.insert(VIPPO po)</td> <td>插入一个持久化对象 </td>
+<td>VIPDataService.findVIP(String info)</td> <td>模糊查找会员</td>
 </tr>
 <tr>
-<td> VIPDataService.delete(VIPPO po)</td> <td>删除一个持久化对象</td>
+<td>VIPDataService.deleteVIP(String id)</td> 
+<td>删除会员</td>
 </tr>
 <tr>
-<td>VIPDataService.update(VIPPO po)</td> <td>更新一个持久化对象 </td>
+<td>VIPDataService.modifyVIP(VIPVO vo)</td> 
+<td>修改会员信息</td>
 </tr>
 <tr>
-<td> VIPDataService.find(String id)</td> <td>根据id模糊查找持久化对象 </td>
+<td>VIPDataService.initAndSaveVIP(VIPVO vo)</td> 
+<td>初始化并保存客户信息</td>
 </tr>
 <tr>
-<td> VIPDataService.find(String name)</td> <td>根据名称模糊查找持久化对象</td>
-</tr>
-<tr>
-<td>VIPDataService.get(String id)</td> <td>根据id得到持久化对象 </td>
+<td>VIPDataService.getVIPInfo()</td> 
+<td>获取所有客户信息</td>
 </tr>
 </table>
 
@@ -1223,130 +1223,99 @@
 
 &nbsp;&nbsp;&nbsp;&nbsp; Goods业务逻辑层模块的接口规范如表15所示。  
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**表15 Goods业务逻辑层模块的接口规范**  
-
 <table>
 <tr>
-<td colspan ="3">提供的服务（供接口）</td>
+<td colspan ="3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;提供的服务（供接口）</td>
 </tr>
 <tr>
-<td rowspan = "3">Goods.getChildCategory</td>
-<td>语法</td><td>public List<CategoryVO> getChildCategory(CategoryVO vo)</td>
+<td rowspan="3">Goods.newGoods</td>
+<td>语法</td> <td> public String newGoods(String name,String category);</td>
 </tr>
 <tr>
-<td>前置条件</td><td>启动一个商品分类管理回合</td>
+<td>前置条件</td> <td>用户选择新建商品</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回所有子节点的信息</td>
+<td>后置条件</td><td>系统显示商品名称和编号</td>
 </tr>
 <tr>
-<td rowspan = "3">Goods.getNewCategoryNumber</td>
-<td>语法</td><td>public String getNewCategoryNumber()</td>
+<td rowspan="3">Goods.findGoods</td>
+<td>语法</td> <td> public List<GoodsVO> findGoods(String info,String type);</td>
 </tr>
 <tr>
-<td>前置条件</td><td>启动一个增加分类回合</td>
+<td>前置条件</td> <td>用户输入信息模糊查找商品</td>
 </tr>
 <tr>
-<td>后置条件</td><td>获得新节点编号</td>
+<td>后置条件</td><td>系统显示模糊查找后符合要求的商品列表</td>
 </tr>
 <tr>
-<td rowspan = "3">Goods.addCategory</td>
-<td>语法</td><td>public boolean addCategory(CategoryVO vo)</td>
+<td rowspan="3">Goods.deleteGoods</td>
+<td>语法</td> <td> public ResultMessage deleteGoods(String id);</td>
 </tr>
 <tr>
-<td>前置条件</td><td>已填写节点名称</td>
+<td>前置条件</td> <td>用户选择删除商品</td>
 </tr>
 <tr>
-<td>后置条件</td><td>持久化保存新节点</td>
+<td>后置条件</td><td>系统更新商品列表</td>
 </tr>
 <tr>
-<td rowspan = "3">Goods.deleteCategory</td>
-<td>语法</td><td>public boolean deleteCategory(CategoryVO vo)</td>
+<td rowspan="3">Goods.modifyGoods</td>
+<td>语法</td> <td> public ResultMessage modifyGoods(GoodsVO vo);</td>
 </tr>
 <tr>
-<td>前置条件</td><td>已选择节点</td>
+<td>前置条件</td> <td>用户选择修改商品信息</td>
 </tr>
 <tr>
-<td>后置条件</td><td>持久化删除节点</td>
+<td>后置条件</td><td>系统更新商品信息</td>
 </tr>
 <tr>
-<td rowspan = "3">Goods.modifyCategory</td>
-<td>语法</td><td>public boolean modifyCategory(CategoryVO vo)</td>
+<td rowspan="3">Goods.initAndSaveGoods</td>
+<td>语法</td> <td>public ResultMessage initAndSaveGoods(GoodsVO vo);</td>
 </tr>
 <tr>
-<td>前置条件</td><td>已选择节点</td>
+<td>前置条件</td> <td>用户保存已初始化的商品信息</td>
 </tr>
 <tr>
-<td>后置条件</td><td>持久化保存修改的节点信息</td>
+<td>后置条件</td><td>系统更新商品信息</td>
 </tr>
 <tr>
-<td rowspan = "3">Goods.getNewGoodsNumber</td>
-<td>语法</td><td>public String getNewGoodsNumber(CategoryVO vo)</td>
+<td rowspan="3">Goods.newGoodsCategory</td>
+<td>语法</td> <td>public ResultMessage newGoodsCategory(String category,String node);</td>
 </tr>
 <tr>
-<td>前置条件</td><td>已填写商品分类</td>
+<td>前置条件</td> <td>用户选择新建商品分类</td>
 </tr>
 <tr>
-<td>后置条件</td><td>获得新商品编号</td>
+<td>后置条件</td><td>系统更新商品分类信息</td>
 </tr>
 <tr>
-<td rowspan = "3">Goods.addGoods</td>
-<td>语法</td><td>public boolean addGoods(GoodsVO vo)</td>
+<td rowspan="3">Goods.deleteGoodsCategory</td>
+<td>语法</td> <td>public ResultMessage deleteGoodsCategory(String category);</td>
 </tr>
 <tr>
-<td>前置条件</td><td>已获得商品编号，已添加商品名称、型号、进价、零售价</td>
+<td>前置条件</td> <td>用户选择删除商品分类</td>
 </tr>
 <tr>
-<td>后置条件</td><td>持久化保存新商品</td>
+<td>后置条件</td><td>系统更新商品分类信息</td>
 </tr>
 <tr>
-<td rowspan = "3">Goods.deleteGoods</td>
-<td>语法</td><td>public boolean deleteGoods(String id)</td>
+<td rowspan="3">Goods.modifyGoodsCategory</td>
+<td>语法</td> <td>public ResultMessage modifyGoodsCategory(String category);</td>
 </tr>
 <tr>
-<td>前置条件</td><td>已选择所要删除的商品</td>
+<td>前置条件</td> <td>用户选择修改商品分类名称</td>
 </tr>
 <tr>
-<td>后置条件</td><td>持久化删除商品</td>
+<td>后置条件</td><td>系统更新商品分类信息</td>
 </tr>
 <tr>
-<td rowspan = "3">Goods.modifyGoods</td>
-<td>语法</td><td>public boolean modifyGoods(GoodsVO vo)</td>
+<td rowspan="3">Goods.getAllGoodsAndCategory</td>
+<td>语法</td> <td>public TreeVO getAllGoodsAndCategory();</td>
 </tr>
 <tr>
-<td>前置条件</td><td>已选择所要修改的商品，并修改商品名称或商品型号或进价或零售价</td>
+<td>前置条件</td><td>用户选择查看所有分类和所有商品</td>
 </tr>
 <tr>
-<td>后置条件</td><td>持久化保存修改的商品</td>
-</tr>
-<tr>
-<td rowspan = "3">Goods.searchGoods</td>
-<td>语法</td><td>public Map<String,String> searchGoods(String id, String name)</td>
-</tr>
-<tr>
-<td>前置条件</td><td>启动一个查询商品回合</td>
-</tr>
-<tr>
-<td>后置条件</td><td>查询所有符合条件的商品的列表</td>
-</tr>
-<tr>
-<td rowspan = "3">Goods.getGoods</td>
-<td>语法</td><td>public GoodsVO getGoods(String id)</td>
-</tr>
-<tr>
-<td>前置条件</td><td>启动一个查询商品回合</td>
-</tr>
-<tr>
-<td>后置条件</td><td>返回要查询的商品信息</td>
-</tr>
-<tr>
-<td rowspan = "3">Goods.getStoreInfo</td>
-<td>语法</td><td>public StoreInfoVO getStoreInfo(GoodsVO vo)</td>
-</tr>
-<tr>
-<td>前置条件</td><td>已添加商品信息</td>
-</tr>
-<tr>
-<td>后置条件</td><td>在一个查看商品回合中，根据商品信息获得所需的商品库存信息</td>
+<td>后置条件</td><td>系统显示所有分类和所有商品</td>
 </tr>
 </table>
 
@@ -1358,22 +1327,38 @@
 <td>服务名</td> <td>服务</td>
 </tr>
 <tr>
-<td>DatabaseFactory.getGoodsDatabase</td><td>得到数据库的服务的引用</td>
+<td>GoodsDataService.newGoods(String name,String category)</td> <td>新建商品</td>
 </tr>
 <tr>
-<td>GoodsDataService.insert(GoodsPO po)</td><td>在数据库中插入单一持久化对象</td>
+<td>GoodsDataService.findGoods(String info,String type)</td> <td>模糊查找商品</td>
 </tr>
 <tr>
-<td>GoodsDataService.delete(GoodsPO po)</td><td>在数据库中删除单一持久化对象</td>
+<td>GoodsDataService.deleteGoods(String id)</td> 
+<td>删除商品</td>
 </tr>
 <tr>
-<td>GoodsDataService.update(GoodsPO po)</td><td>在数据库中更新单一持久化对象</td>
+<td>GoodsDataService.modifyGoods(GoodsVO vo)</td> 
+<td>修改商品信息</td>
 </tr>
 <tr>
-<td>GoodsDataService.find(String id)</td><td>根据ID在数据库中查找单一持久化对象</td>
+<td>GoodsDataService.initAndSaveGoods(GoodsVO vo)</td> 
+<td>初始化并保存商品信息</td>
 </tr>
 <tr>
-<td>GoodsDataService.finds(String field,int value)</td><td>根据字段名和值进行查找多个持久化对象</td>
+<td>GoodsDataService.newGoodsCategory(String category,String node)</td> 
+<td>新建商品分类</td>
+</tr>
+<tr>
+<td>GoodsDataService.deleteGoodsCategory(String category)</td> 
+<td>删除商品分类</td>
+</tr>
+<tr>
+<td>GoodsDataService.modifyGoodsCategory(String category)</td> 
+<td>修改商品分类名</td>
+</tr>
+<tr>
+<td>GoodsDataService.getAllGoodsAndCategory()</td> 
+<td>获取所有商品分类和商品</td>
 </tr>
 </table>
 
