修改了体系结构文档中sale和present模块的内容，以及大家都是pull下来文档，改完，把原文档删除，传新文档，这样子改的吗？还是只有我是这种zz的改法

--- a/doc/md/体系结构描述文档/体系结构描述文档.md
+++ b/doc/md/体系结构描述文档/体系结构描述文档.md
@@ -858,54 +858,134 @@
 <td>后置条件</td><td>返回所有赠送策略的列表 </td>
 </tr>
 <tr>
-<td rowspan="3">Presentbl.allSpecificStrategy</td>
-<td>语法</td> <td>public List<PresentVO> allStrategy(StrategyType t)</td>
+<td rowspan="3">Presentbl.allPresentForMembership</td>
+<td>语法</td> <td>public List<PresentForMembershipVO> allPresentForMembership()</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回所有指定类型的赠送策略的列表</td>
+<td>后置条件</td><td>返回所有针对用户级别型赠送策略的列表</td>
+</tr>
+<tr>
+<td rowspan="3">Presentbl.allPresentForSpecialPackage</td>
+<td>语法</td> <td>public List<PresentForSpeciaPackageVO> allPresentForSpecialPackage()</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>无</td>
+</tr>
+<tr>
+<td>后置条件</td><td>返回所有特价包型赠送策略的列表</td>
+</tr>
+<tr>
+<td rowspan="3">Presentbl.allPresentForSum</td>
+<td>语法</td> <td>public List<PresentForSumVO> allPresentForSum()</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>无</td>
+</tr>
+<tr>
+<td>后置条件</td><td>返回所有针对总价型赠送策略的列表</td>
 </tr>
 <tr>
 <td rowspan="3">Presentbl.getStrategy</td>
-<td>语法</td> <td>public PresentVO getStrategy(SaleVO vo)</td>
+<td>语法</td> <td>public List<PresentVO> getStrategy(SaleVO vo)</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>已经输入了必要的销售信息 </td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回对应的赠送策略 </td>
+<td>后置条件</td><td>返回对应的赠送策略列表 </td>
 </tr>
 <tr>
-<td rowspan="3">Presentbl.addStrategy</td>
-<td>语法</td> <td>public void addStrategy(StrategyType type, PresentVO vo)</td>
+<td rowspan="3">Presentbl.addPresentForMembership</td>
+<td>语法</td> <td>public ResultMessage addPresentForMembership(PresentForMembershipVO vo)</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>已填好一个策略必要的信息，且输入都合法 </td>
+<td>前置条件</td> <td>已填好针对用户级别型赠送策略必要的信息，且输入都合法 </td>
 </tr>
 <tr>
-<td>后置条件</td><td>持久化保存新策略信息 </td>
+<td>后置条件</td><td>持久化保存针对用户级别型赠送策略信息 </td>
 </tr>
 <tr>
-<td rowspan="3">Presentbl.deleteStrategy</td>
-<td>语法</td> <td>public void deleteStrategy(String id)</td>
+<td rowspan="3">Presentbl.addPresentForSpecialPackage</td>
+<td>语法</td> <td>public ResultMessage addPresentForSpecialPackage(PresentForSpecialPackageVO vo)</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>无</td>
+<td>前置条件</td> <td>已填好特价包型赠送策略必要的信息，且输入都合法 </td>
 </tr>
 <tr>
-<td>后置条件</td><td>持久化删除策略信息，并返回是否删除成功 </td>
+<td>后置条件</td><td>持久化保存特价包型赠送策略信息 </td>
 </tr>
 <tr>
-<td rowspan="3">Presentbl.saveStrategy</td>
-<td>语法</td> <td>public void saveStrategy(PresentVO vo)</td>
+<td rowspan="3">Presentbl.addPresentForSum</td>
+<td>语法</td> <td>public ResultMessage addPresentForSum(PresentForSumVO vo)</td>
 </tr>
 <tr>
-<td>前置条件</td> <td>修改的策略信息都合法 </td>
+<td>前置条件</td> <td>已填好针对总价型赠送策略必要的信息，且输入都合法 </td>
 </tr>
 <tr>
-<td>后置条件</td><td>持久化保存修改的信息 </td>
+<td>后置条件</td><td>持久化保存针对总价型赠送策略信息 </td>
+</tr>
+<tr>
+<td rowspan="3">Presentbl.deletePresentForMembership</td>
+<td>语法</td> <td>public ResultMessage deletePresentForMembership(String id)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>无 </td>
+</tr>
+<tr>
+<td>后置条件</td><td>持久化删除该针对用户级别型赠送策略信息，并返回是否删除成功 </td>
+</tr>
+<tr>
+<td rowspan="3">Presentbl.deletePresentForSpecialPackage</td>
+<td>语法</td> <td>public ResultMessage deletePresentForSpecialPackage(String id)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>无 </td>
+</tr>
+<tr>
+<td>后置条件</td><td>持久化删除该特价包型赠送策略信息，并返回是否删除成功 </td>
+</tr>
+<tr>
+<td rowspan="3">Presentbl.deletePresentForSum</td>
+<td>语法</td> <td>public ResultMessage deletePresentForSum(String id)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>无 </td>
+</tr>
+<tr>
+<td>后置条件</td><td>持久化删除针对总价型赠送策略信息,并返回是否删除成功 </td>
+</tr>
+<tr>
+<td rowspan="3">Presentbl.savePresentForMembership</td>
+<td>语法</td> <td>public ResultMessage savePresentForMembership(PresentForMembershipVO vo)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td> 要保存的策略信息都合法 </td>
+</tr>
+<tr>
+<td>后置条件</td><td>持久化保存该针对用户级别型赠送策略信息，并返回是否保存成功 </td>
+</tr>
+<tr>
+<td rowspan="3">Presentbl.savePresentForSpecialPackage</td>
+<td>语法</td> <td>public ResultMessage savePresentForSpecialPackage(PresentForSpecialPackageVO vo)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td> 要保存的策略信息都合法 </td>
+</tr>
+<tr>
+<td>后置条件</td><td>持久化保存该特价包型赠送策略信息，并返回是否保存成功 </td>
+</tr>
+<tr>
+<td rowspan="3">Presentbl.savePresentForSum</td>
+<td>语法</td> <td>public ResultMessage savePresentForSum(PresentForSumVO vo)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>要保存的策略信息都合法 </td>
+</tr>
+<tr>
+<td>后置条件</td><td>持久化保存该针对总价型赠送策略信息,并返回是否保存成功 </td>
 </tr>
 </table>
   
@@ -917,19 +997,55 @@
 <td>服务名</td> <td>服务</td>
 </tr>
 <tr>
-<td>PresentDataService.insert(PresentPO po)</td><td>插入一个持久化对象</td>
+<td>DatabaseFactory.getPresentDatabase</td><td>得到Present数据库的服务的引用</td>
 </tr>
 <tr>
-<td>PresentDataService.delete(PresentPO po)</td><td>删除一个持久化对象 </td>
+<td>PresentDataService.insert(PresentForMembershipPO po)</td><td>插入一个针对用户级别型赠送策略持久化对象</td>
 </tr>
 <tr>
-<td>PresentDataService.update(PresentPO po)</td><td>更新一个持久化对象</td>
+<td>PresentDataService.insert(PresentForSpecialPackagePO po)</td><td>插入一个特价包型赠送策略持久化对象</td>
 </tr>
 <tr>
-<td>PresentDataService.get(StrategyType)</td><td>根据策略类型查找持久化对象 </td>
+<td>PresentDataService.insert(PresentForSumPO po)</td><td>插入一个针对总价型赠送策略持久化对象</td>
 </tr>
 <tr>
-<td>PresentDataService.getAll()</td><td>得到所有持久化对象</td>
+<td>PresentDataService.deletePresentForMembership(String id)</td><td>删除一个针对用户级别型赠送策略持久化对象 </td>
+</tr>
+<tr>
+<td>PresentDataService.deletePresentForSpecialPackage(String id)</td><td>删除一个特价包型赠送策略持久化对象 </td>
+</tr>
+<tr>
+<td>PresentDataService.deletePresentForSum(String id)</td><td>删除一个针对总价型赠送策略持久化对象 </td>
+</tr>
+<tr>
+<td>PresentDataService.update(PresentForMembershipPO po)</td><td>更新一个针对用户级别型赠送策略持久化对象</td>
+</tr>
+<tr>
+<td>PresentDataService.update(PresentForSpecialPackagePO po)</td><td>更新一个特价包型赠送策略持久化对象</td>
+</tr>
+<tr>
+<td>PresentDataService.update(PresentForSumPO po)</td><td>更新一个针对总价型赠送策略持久化对象</td>
+</tr>
+<tr>
+<td>PresentDataService.getPresentForMembership()</td><td>得到所有针对用户级别型赠送策略持久化对象 </td>
+</tr>
+<tr>
+<td>PresentDataService.getPresentForSpecialPackage()</td><td>得到所有特价包型赠送策略持久化对象 </td>
+</tr>
+<tr>
+<td>PresentDataService.getPresentForSum()</td><td>得到所有针对总价型赠送策略持久化对象 </td>
+</tr>
+<tr>
+<td>PresentDataService.getPresentForMembership(VIPGrade grade)</td><td>得到所有针对特定用户级别赠送策略持久化对象 </td>
+</tr>
+<tr>
+<td>PresentDataService.getPresentForSpecialPackage(List<String> GoodsID)</td><td>得到所有含有商品列表中商品的特价包型赠送策略持久化对象 </td>
+</tr>
+<tr>
+<td>PresentDataService.getPresentForSum(int sum)</td><td>得到所有针对该总价型赠送策略持久化对象 </td>
+</tr>
+<tr>
+<td>PresentDataService.get()</td><td>得到所有赠送策略持久化对象</td>
 </tr>
 </table>
 
@@ -941,18 +1057,48 @@
 <td colspan ="3">提供的服务（供接口）</td>
 </tr>
 <tr>
-<td rowspan="3">Sale.createList</td>
-<td>语法</td> <td>public ListInitVO createList(ListType type)</td>
+<td rowspan="3">Sale.createSaleList</td>
+<td>语法</td> <td>public String createSaleList()</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回单据编号和操作员信息 </td>
+<td>后置条件</td><td>如果能成功创建，返回销售单单据编号，如果不能成功创建，返回错误信息 </td>
+</tr>
+<tr>
+<td rowspan="3">Sale.createSaleReturnList</td>
+<td>语法</td> <td>public String createSaleReturnList()</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>无</td>
+</tr>
+<tr>
+<td>后置条件</td><td>如果能成功创建，返回销售退货单单据编号，如果不能成功创建，返回错误信息 </td>
+</tr>
+<tr>
+<td rowspan="3">Sale.createStockList</td>
+<td>语法</td> <td>public String createStockList()</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>无</td>
+</tr>
+<tr>
+<td>后置条件</td><td>如果能成功创建，返回进货单单据编号，如果不能成功创建，返回错误信息 </td>
+</tr>
+<tr>
+<td rowspan="3">Sale.createStockReturnList</td>
+<td>语法</td> <td>public String createStockReturnList()</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>无</td>
+</tr>
+<tr>
+<td>后置条件</td><td>如果能成功创建，返回进货退货单单据编号，如果不能成功创建，返回错误信息 </td>
 </tr>
 <tr>
 <td rowspan="3">Sale.openDraftList</td>
-<td>语法</td> <td>public Map<ListType, String> openDraftList()</td>
+<td>语法</td> <td>public List<SalesmanListVO> openDraftList()</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
@@ -961,58 +1107,138 @@
 <td>后置条件</td><td>打开草稿单列表 </td>
 </tr>
 <tr>
-<td rowspan="3">Sale.openList</td>
-<td>语法</td> <td>public SaleListVO openList(ListType t, String id)</td>
+<td rowspan="3">Sale.openSaleDraftList</td>
+<td>语法</td> <td>public List<SaleListVO> openSaleDraftList()</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>无</td>
 </tr>
 <tr>
-<td>后置条件</td><td>打开一张草稿单</td>
+<td>后置条件</td><td>打开销售草稿单列表 </td>
 </tr>
 <tr>
-<td rowspan="3">Sale.saveList</td>
-<td>语法</td> <td>public void saveList(ListType type, ListVO vo)</td>
+<td rowspan="3">Sale.openSaleReturnDraftList</td>
+<td>语法</td> <td>public List<SaleReturnListVO> openSaleReturnDraftList()</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>无</td>
+</tr>
+<tr>
+<td>后置条件</td><td>打开销售退货草稿单列表 </td>
+</tr>
+<tr>
+<td rowspan="3">Sale.openStockDraftList</td>
+<td>语法</td> <td>public List<StockListVO> openStockDraftList()</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>无</td>
+</tr>
+<tr>
+<td>后置条件</td><td>打开进货草稿单列表 </td>
+</tr>
+<tr>
+<td rowspan="3">Sale.openStockReturnDraftList</td>
+<td>语法</td> <td>public List<StockReturnListVO> openStockReturnDraftList()</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>无</td>
+</tr>
+<tr>
+<td>后置条件</td><td>打开进货退货草稿单列表 </td>
+</tr>
+<tr>
+<td rowspan="3">Sale.saveSaleDraftList</td>
+<td>语法</td> <td>public ResultMessage saveSaleDraftList(SaleListVO vo)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>启动一个销售回合</td>
+</tr>
+<tr>
+<td>后置条件</td><td>持久化保存销售草稿单数据 </td>
+</tr>
+<tr>
+<td rowspan="3">Sale.saveSaleReturnDraftList</td>
+<td>语法</td> <td>public ResultMessage saveSaleReturnDraftList(SaleReturnListVO vo)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>启动一个销售退货回合</td>
+</tr>
+<tr>
+<td>后置条件</td><td>持久化保存销售退货草稿单数据 </td>
+</tr>
+<tr>
+<td rowspan="3">Sale.saveStockDraftList</td>
+<td>语法</td> <td>public ResultMessage saveStockDraftList(StockListVO vo)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>启动一个进货回合</td>
+</tr>
+<tr>
+<td>后置条件</td><td>持久化保存进货草稿单数据 </td>
+</tr>
+<tr>
+<td rowspan="3">Sale.saveStockReturnDraftList</td>
+<td>语法</td> <td>public ResultMessage saveStockReturnDraftList(StockReturnListVO vo)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>启动一个进货退货回合</td>
+</tr>
+<tr>
+<td>后置条件</td><td>持久化保存进货退货草稿单数据 </td>
+</tr>
+<tr>
+<td rowspan="3">Sale.commitSaleList</td>
+<td>语法</td> <td>public ResultMessage commitSaleList(SaleListVO vo)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>销售单信息填写完整且合法</td>
+</tr>
+<tr>
+<td>后置条件</td><td>提交销售单并持久化保存销售单数据</td>
+</tr>
+<tr>
+<td rowspan="3">Sale.commitSaleReturnList</td>
+<td>语法</td> <td>public ResultMessage commitSaleReturnList(SaleReturnListVO vo)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>销售退货单信息填写完整且合法</td>
+</tr>
+<tr>
+<td>后置条件</td><td>提交销售退货单并持久化保存销售退货单数据</td>
+</tr>
+<tr>
+<td rowspan="3">Sale.commitStockList</td>
+<td>语法</td> <td>public ResultMessage commitStockList(StockListVO vo)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>进货单信息填写完整且合法</td>
+</tr>
+<tr>
+<td>后置条件</td><td>提交进货单并持久化保存进货单数据</td>
+</tr>
+<tr>
+<td rowspan="3">Sale.commitStockReturnList</td>
+<td>语法</td> <td>public ResultMessage commitStockReturnList(StockReturnListVO vo)</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>进货退货单信息填写完整且合法</td>
+</tr>
+<tr>
+<td>后置条件</td><td>提交进货退货单并持久化保存进货退货单数据</td>
+</tr>
+<tr>
+<td rowspan="3">Sale.findVIP</td>
+<td>语法</td> <td>public List<VIPVO> findVIP(String info, SalesmanListType type) </td>
 </tr>
 <tr>
 <td>前置条件</td> <td>启动一个销售/进货/进货退货/销售退货回合</td>
 </tr>
 <tr>
-<td>后置条件</td><td>持久化保存单据数据 </td>
+<td>后置条件</td><td>返回所有符合单据类型和输入条件的会员的列表</td>
 </tr>
 <tr>
-<td rowspan="3">Sale.commitList</td>
-<td>语法</td> <td>public void commitList(ListType type, ListVO vo)</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>填写完单据信息</td>
-</tr>
-<tr>
-<td>后置条件</td><td>提交单据并持久化保存单据数据</td>
-</tr>
-<tr>
-<td rowspan="3">Sale.searchVIP</td>
-<td>语法</td> <td>public Map<String,String> searchVIP(int id, String name) </td>
-</tr>
-<tr>
-<td>前置条件</td> <td>无</td>
-</tr>
-<tr>
-<td>后置条件</td><td>返回所有符合输入条件的会员的列表(每项为会员编号和名称)</td>
-</tr>
-<tr>
-<td rowspan="3">Sale.getVIP </td>
-<td>语法</td> <td>public Map<String,String> searchVIP(int id, String name)</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>无</td>
-</tr>
-<tr>
-<td>后置条件</td><td>返回所有符合输入条件的会员的列表(每项为会员编号和名称) </td>
-</tr>
-<tr>
-<td rowspan="3">Sale.searchGoods</td>
-<td>语法</td> <td>public Map<String,String> findGoods(String id, String name) </td>
+<td rowspan="3">Sale.findGoods</td>
+<td>语法</td> <td>public List<GoodsVO> findGoods(String info) </td>
 </tr>
 <tr>
 <td>前置条件</td> <td>启动一个销售/进货/进货退货/销售退货回合</td>
@@ -1021,34 +1247,14 @@
 <td>后置条件</td><td>查询所有符合条件的商品的列表</td>
 </tr>
 <tr>
-<td rowspan="3">Sale.getGoods </td>
-<td>语法</td> <td>public GoodsVO getGoods(String id)</td>
+<td rowspan="3">Sale.findPresent</td>
+<td>语法</td> <td>public PresentResultVO findPresent(SaleVO vo) </td>
 </tr>
 <tr>
-<td>前置条件</td> <td>启动一个销售/进货/进货退货/销售退货回合</td>
+<td>前置条件</td> <td>启动一个销售回合</td>
 </tr>
 <tr>
-<td>后置条件</td><td>返回要查询的商品信息 </td>
-</tr>
-<tr>
-<td rowspan="3">Sale.getPresent</td>
-<td>语法</td> <td>public SalePresentVO getPresent(SaleListVO) </td>
-</tr>
-<tr>
-<td>前置条件</td> <td>在一个销售过程中，已输入部分商品信息</td>
-</tr>
-<tr>
-<td>后置条件</td><td>返回销售策略</td>
-</tr>
-<tr>
-<td rowspan="3">Sale.getTotal</td>
-<td>语法</td> <td>public int getTotal(ListType type, SaleListVO vo)</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>已输入商品信息</td>
-</tr>
-<tr>
-<td>后置条件</td><td>返回总价</td>
+<td>后置条件</td><td>返回查询赠送策略后的结果</td>
 </tr>
 </table>
 
@@ -1063,19 +1269,55 @@
 <td>DatabaseFactory.getSalesDatabase</td><td>得到Sales数据库的服务的引用</td>
 </tr>
 <tr>
-<td>SalesDataService.insert(SalesPO po)</td><td>在数据库中插入单一持久化对象</td>
+<td>SalesDataService.insert(SaleListPO po)</td><td>在数据库中插入销售单的单一持久化对象</td>
 </tr>
 <tr>
-<td>SalesDataService.delete(SalesPO po)</td><td>在数据库中删除单一持久化对象</td>
+<td>SalesDataService.insert(SaleReturnListPO po)</td><td>在数据库中插入销售退货单的单一持久化对象</td>
 </tr>
 <tr>
-<td>SalesDataService.update(SalesPO po)</td><td>在数据库中更新单一持久化对象</td>
+<td>SalesDataService.insert(StockListPO po)</td><td>在数据库中插入进货单的单一持久化对象</td>
 </tr>
 <tr>
-<td>SalesDataService.find(String id)</td><td>根据ID在数据库中查找单一持久化对象</td>
+<td>SalesDataService.insert(StockReturnListPO po)</td><td>在数据库中插入进货退货单的单一持久化对象</td>
 </tr>
 <tr>
-<td>SalesDataService.finds(String field,int value)</td><td>根据字段名和值进行查找多个持久化对象</td>
+<td>SalesDataService.deleteSaleList(String id)</td><td>在数据库中删除销售单的单一持久化对象</td>
+</tr>
+<tr>
+<td>SalesDataService.deleteSaleReturnList(String id)</td><td>在数据库中删除销售退货单的单一持久化对象</td>
+</tr>
+<tr>
+<td>SalesDataService.deleteStockList(String id)</td><td>在数据库中删除进货单的单一持久化对象</td>
+</tr>
+<tr>
+<td>SalesDataService.deleteStockReturnList(String id)</td><td>在数据库中删除进货退货单的单一持久化对象</td>
+</tr>
+<tr>
+<td>SalesDataService.update(SaleListPO po)</td><td>在数据库中更新销售单的单一持久化对象</td>
+</tr>
+<tr>
+<td>SalesDataService.update(SaleReturnListPO po)</td><td>在数据库中更新销售退货单的单一持久化对象</td>
+</tr>
+<tr>
+<td>SalesDataService.update(StockListPO po)</td><td>在数据库中更新销售单的单一持久化对象</td>
+</tr>
+<tr>
+<td>SalesDataService.update(StockReturnListPO po)</td><td>在数据库中更新销售单的单一持久化对象</td>
+</tr>
+<tr>
+<td>SalesDataService.getSaleList(State state)</td><td>得到所有该状态的销售单持久化对象</td>
+</tr>
+<tr>
+<td>SalesDataService.getSaleReturnList(State state)</td><td>得到所有该状态的销售退货单持久化对象</td>
+</tr>
+<tr>
+<td>SalesDataService.getStockList(State state)</td><td>得到所有该状态的进货单持久化对象</td>
+</tr>
+<tr>
+<td>SalesDataService.getStockReturnList(State state)</td><td>得到所有该状态的进货退货单持久化对象</td>
+</tr>
+<tr>
+<td>SalesDataService.get(State state)</td><td>得到所有该状态的持久化对象</td>
 </tr>
 </table>
 
