完成了user的详细设计

--- a/doc/md/体系结构描述文档/体系结构描述文档.md
+++ b/doc/md/体系结构描述文档/体系结构描述文档.md
@@ -1339,6 +1339,26 @@
 <td>后置条件</td><td>查找是否存在相应的User,根据输入的password返回登录验证的结果</td>
 </tr>
 <tr>
+<td rowspan = "3">User.logout</td>
+<td>语法</td><td> public ResultMessage logout();</td>
+</tr>
+<tr>
+<td>前置条件</td><td>已登陆</td>
+</tr>
+<tr>
+<td>后置条件</td><td>登出</td>
+</tr>
+<tr>
+<td rowspan = "3">User.getCurrentUserInfo</td>
+<td>语法</td><td> public UserVO getCurrentUserInfo();</td>
+</tr>
+<tr>
+<td>前置条件</td><td>已登陆</td>
+</tr>
+<tr>
+<td>后置条件</td><td>返回当前用户的信息</td>
+</tr>
+<tr>
 <td rowspan = "3">User.changePassword</td>
 <td>语法</td><td>public ResultMessage changePassword(String old,String new)</td>
 </tr>
@@ -1360,7 +1380,7 @@
 </tr>
 <tr>
 <td rowspan = "3">User.checkMessage</td>
-<td>语法</td><td> public List<MessageVO> checkMessage(String id)</td>
+<td>语法</td><td> public List<MessageVO> checkMessage()</td>
 </tr>
 <tr>
 <td>前置条件</td><td>用户已登录</td>
@@ -1429,7 +1449,7 @@
 <td>后置条件</td><td>返回日志信息</td>
 </tr>
 <tr>
-<td rowspan = "3">User.saveOpertion</td>
+<td rowspan = "3">User.saveOpertion</td>		//层内接口
 <td>语法</td><td> public ResultMessage saveOperation(OperationVO)</td>
 </tr>
 <tr>
@@ -1451,6 +1471,12 @@
 <td>DatabaseFactory.getUserDatabase</td><td>得到User数据库的服务的引用</td>
 </tr>
 <tr>
+<td>DatabaseFactory.getMessageDatabase</td><td>得到Message数据库的服务的引用</td>
+</tr>
+<tr>
+<td>DatabaseFactory.getOperationLogDatabase</td><td>得到OperationLog数据库的服务的引用</td>
+</tr>
+<tr>
 <td>UserDataService.insert(UserPO po)</td><td>在数据库中插入单一持久化对象</td>
 </tr>
 <tr>
@@ -1461,6 +1487,24 @@
 </tr>
 <tr>
 <td>UserDataService.find(String id)</td><td>根据ID在数据库中查找单一持久化对象</td>
+</tr>
+<tr>
+<td>MessageDataService.insert(MessagePO po)</td><td>在数据库中插入单一持久化对象</td>
+</tr>
+<tr>
+<td>MessageDataService.delete(MessagePO po)</td><td>在数据库中删除单一持久化对象</td>
+</tr>
+<tr>
+<td>MessageDataService.find(String id)</td><td>根据用户ID在数据库中查找该用户的消息</td>
+</tr>
+<tr>
+<td>OperationLogDataService.insert(OperationPO po)</td><td>在数据库中插入单一持久化对象</td>
+</tr>
+<tr>
+<td>OperationLogDataService.delete(OperationPO po)</td><td>在数据库中删除单一持久化对象</td>
+</tr>
+<tr>
+<td>OperationLogDataService.findAll()</td><td>得到所有持久化对象</td>
 </tr>
 
 &nbsp;&nbsp;&nbsp;&nbsp; Goods业务逻辑层模块的接口规范如表15所示。  
@@ -1823,7 +1867,7 @@ List包：
 - ListPO:各种单据的编号列表  
 User包：  
 - UserPO：编号，名称，密码，角色，是否有最高权限  
-- MessagePO：题目，内容，时间  
+- MessagePO：题目，内容，时间，收件人  
 - OperationPO：操作编号，操作时间，操作员，操作类型，操作内容。  
 
 
