完成Account模块的详细设计

--- a/doc/md/详细设计文档/详细设计文档完整版V1.0.md
+++ b/doc/md/详细设计文档/详细设计文档完整版V1.0.md
@@ -1147,7 +1147,6 @@ User模块的设计如图4.1.5-1 所示
 
 模块 | 职责
 ---|---
- | 管理Userbl各个类的任务
 PersonalInfo| 完成个人用户所需的功能
 SystemManager | 完成系统管理员所需的功能
 OperationLog | 完成日志有关的功能  
@@ -1443,6 +1442,89 @@ Listbl 模块的详细设计类图如图4.1.6-1所示
 ####（5）业务逻辑层的设计原理  
   利用委托式控制风格，每个界面需要访问的业务逻辑由各自的控制器委托给不同领域的对象。并通过向外提供接口避免了循环依赖的问题。其他设计原理从略。
   
+
+### 4.1.7 Account 模块
+#### （1）模块描述
+Accountbl模块承担的需求参见需求规格说明文档功能需求及相关非功能需求
+Accountbl模块的职责及接口参见软件系统体系结构描述文档
+
+#### （2）整体结构
+在体系结构的设计基础上，进一步将层间接口细化，按照接口最小化原则将AccountBLService接口拆分成FinanceListService，AccountManagerServicec，AccountInitService三部分，并分别用FinanceListServiceControllor，AccountManagement，AccountInit三个业务逻辑对象实现它们。其中，FinanceListServiceControllor又会将任务委托给具体的list类来处理。也将AcountDataService拆分成PaymentListDataService，CollectionListDataService，CashExpenseListDataService,AccountDataService四部分。   
+
+Account模块的设计如图4.1.5-1 所示
+
+![](doc/md/体系结构描述文档/Account模块的详细设计方案)  
+
+**图 4.1.5（1）-1 Accountbl模块设计模型**<br/>
+
+表 4.1.5-1（2） Accountbl模块各个类的职责<br/>
+
+模块 | 职责
+---|---
+FinanceListServiceControllor|统一控制与财务类单据相关的操作  
+FinanceList|完成与三种单据都相关的功能   
+AccountManagement|实现与账户管理有关的功能    
+AccountInit|完成与期初建账有关的功能  
+PaymentList|完成与付款单有关的功能  
+CollectionList|完成与收款单有关的功能  
+CashExpenseList|完成与现金费用单有关的功能  
+
+#### （3）模块内部类的接口规范
+FinanceListServiceControllor 的接口参见原型代码  
+AccountManagement  的接口参见原型代码   
+AccountInit  的接口参见原型代码 
+PaymentList，CollectionList，CashExpenseList的接口同各种单据的通用接口，详细参见体系结构描述文档   
+
+表4.1.7（3）-1 Financelist  的接口规范
+
+<table>
+<tr>
+<td colspan ="3">提供的服务（供接口）</td>
+</tr>
+<tr>
+<td rowspan = "3">OpenDraft</td>
+<td>语法</td><td>public List<FinanceListVO> openDraft()</td>
+</tr>
+<tr>
+<td>前置条件</td><td> 财务人员已登陆</td>
+</tr>
+<tr>
+<td>后置条件</td><td>返回所有财务类草稿单列表</td>
+</tr>
+<tr>
+<td rowspan = "3">OpenCommitted</td>
+<td>语法</td><td>public List<FinanceListVO> openCommitted()</td>
+</tr>
+<tr>
+<td>前置条件</td><td> 财务人员已登陆</td>
+</tr>
+<tr>
+<td>后置条件</td><td>返回所有财务类已提交单列表</td>
+</tr>
+<tr>
+<td rowspan = "3">findVIP</td>
+<td>语法</td><td>public List<VIPVO> findVIP(String info)</td>
+</tr>
+<tr>
+<td>前置条件</td><td>无</td>
+</tr>
+<tr>
+<td>后置条件</td><td>返回符合关键词的会员列表</td>
+</tr>
+<tr>
+<td rowspan = "3">findAccount</td>
+<td>语法</td><td>public List<AccountVO> findAccount()</td>
+</tr>
+<tr>
+<td>前置条件</td><td>无</td>
+</tr>
+<tr>
+<td>后置条件</td><td>返回所有账户列表</td>
+</tr>
+</table>
+
+
+
   
 ## 5.依赖视角  
 
