解决详细设计文档中两个图片不能显示的问题

--- a/doc/md/详细设计文档/详细设计文档完整版V1.0.md
+++ b/doc/md/详细设计文档/详细设计文档完整版V1.0.md
@@ -1,6 +1,4 @@
-
 ---
-
 # &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;灯具进销存系统
 # &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 详细设计描述文档
 # &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;V1.0 正式版
@@ -18,7 +16,7 @@
 4、结构视角   
 5、依赖视角  
   
-  
+
   
 ## 1. 引言
 
@@ -1139,7 +1137,7 @@ Userbl模块的职责及接口参见软件系统体系结构描述文档
 
 User模块的设计如图4.1.5-1 所示
 
-![](doc/md/体系结构描述文档/User模块的详细设计方案)  
+![](doc/md/详细设计文档/User模块的详细设计方案.png)
 
 **图 4.1.5（1）-1 Userbl模块设计模型**<br/>
 
@@ -1453,7 +1451,7 @@ Accountbl模块的职责及接口参见软件系统体系结构描述文档
 
 Account模块的设计如图4.1.5-1 所示
 
-![](doc/md/体系结构描述文档/Account模块的详细设计方案)  
+![](doc/md/详细设计文档/Account模块的详细设计方案.png)
 
 **图 4.1.5（1）-1 Accountbl模块设计模型**<br/>
 
