写了新建收款单时的界面，不过子界面加载的css中关于背景的样式使用不了；补充体系结构account包的po

--- a/doc/md/体系结构描述文档/体系结构描述文档.md
+++ b/doc/md/体系结构描述文档/体系结构描述文档.md
@@ -1862,7 +1862,13 @@ Store包：
 - StoreOverflowListItemPO类包含列表项编号、商品名称、实际库存数量、系统中数量、报溢数量，备注。  
 - StoreLostListItemPO类包含列表项编号、商品名称、实际库存数量、系统中数量、报损数量，备注。  
 Account包：  
-- AccountPO:账户名称，余额  
+- AccountPO:账户名称，余额   
+- PaymentListPO: 单据编号，客户，操作员，转账列表，总额汇总。  
+- PaymentListItemPO:银行账户，转账金额，备注。  
+- CollectionListPO:单据编号，客户，操作员，转账列表，总额汇总。  
+- CollectionListItemPO:银行账户，转账金额，备注。  
+- CashExpenseListPO:单据编号，操作员，银行账户，条目清单，总额汇总。  
+- - CashExpenseListItemPO:条目名，金额，备注。  
 List包：  
 - ListPO:各种单据的编号列表  
 User包：  
