--- a/doc/md/体系结构描述文档/体系结构描述文档.md
+++ b/doc/md/体系结构描述文档/体系结构描述文档.md
@@ -749,18 +749,28 @@
 <td colspan ="3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;提供的服务（供接口）</td>
 </tr>
 <tr>
-<td rowspan="3">VIP.newVIP</td>
-<td>语法</td> <td> public String newVIP(String telephone);</td>
+<td rowspan="3">VIP.newVIPID</td>
+<td>语法</td> <td> public String newVIPID(VIPVO vo);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>用户选择新建客户</td>
 </tr>
 <tr>
-<td>后置条件</td><td>系统显示客户电话和编号</td>
+<td>后置条件</td><td>系统返回客户编号</td>
+</tr>
+<tr>
+<td rowspan="3">VIP.getVIP</td>
+<td>语法</td> <td> public String getVIP(String name);</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>用户选择获取客户信息</td>
+</tr>
+<tr>
+<td>后置条件</td><td>系统返回客户信息</td>
 </tr>
 <tr>
 <td rowspan="3">VIP.findVIP</td>
-<td>语法</td> <td> public List<VIPVO> findVIP(String info,String type);</td>
+<td>语法</td> <td> public List findVIP(String info,String type);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>用户输入信息模糊查找客户</td>
@@ -770,7 +780,7 @@
 </tr>
 <tr>
 <td rowspan="3">VIP.deleteVIP</td>
-<td>语法</td> <td> public ResultMessage deleteVIP(String id);</td>
+<td>语法</td> <td> public ResultMessage deleteVIP(String name);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>用户选择删除客户</td>
@@ -788,26 +798,6 @@
 <tr>
 <td>后置条件</td><td>系统更新客户信息</td>
 </tr>
-<tr>
-<td rowspan="3">VIP.initAndSaveVIP</td>
-<td>语法</td> <td>public ResultMessage initAndSaveVIP(VIPVO vo);</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>用户保存已初始化的客户信息</td>
-</tr>
-<tr>
-<td>后置条件</td><td>系统更新客户信息</td>
-</tr>
-<tr>
-<td rowspan="3">VIP.getVIPInfo</td>
-<td>语法</td> <td>public List<VIPVO> getVIPInfo();</td>
-</tr>
-<tr>
-<td>前置条件</td><td>用户选择查看所有客户信息</td>
-</tr>
-<tr>
-<td>后置条件</td><td>系统显示所有客户信息</td>
-</tr>
 </table>
 <table>
 <tr>
@@ -817,26 +807,21 @@
 <td>服务名</td> <td>服务</td>
 </tr>
 <tr>
-<td>VIPDataService.newVIP(String telephone)</td> <td>新建会员</td>
+<td>VIPDataService.newVIPID(VIPVO vo)</td> <td>新建会员</td>
 </tr>
 <tr>
-<td>VIPDataService.findVIP(String info)</td> <td>模糊查找会员</td>
+<td>VIPDataService.getVIP(String name)</td> <td>获取会员信息</td>
 </tr>
 <tr>
-<td>VIPDataService.deleteVIP(String id)</td> 
+<td>VIPDataService.findVIP(String info,String type)</td> <td>模糊查找会员</td>
+</tr>
+<tr>
+<td>VIPDataService.deleteVIP(String name)</td> 
 <td>删除会员</td>
 </tr>
 <tr>
 <td>VIPDataService.modifyVIP(VIPVO vo)</td> 
 <td>修改会员信息</td>
-</tr>
-<tr>
-<td>VIPDataService.initAndSaveVIP(VIPVO vo)</td> 
-<td>初始化并保存客户信息</td>
-</tr>
-<tr>
-<td>VIPDataService.getVIPInfo()</td> 
-<td>获取所有客户信息</td>
 </tr>
 </table>
 
@@ -1515,13 +1500,13 @@
 </tr>
 <tr>
 <td rowspan="3">Goods.newGoods</td>
-<td>语法</td> <td> public String newGoods(String name,String category);</td>
+<td>语法</td> <td> public String newGoodsID(GoodsVO vo);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>用户选择新建商品</td>
 </tr>
 <tr>
-<td>后置条件</td><td>系统显示商品名称和编号</td>
+<td>后置条件</td><td>系统返回商品编号</td>
 </tr>
 <tr>
 <td rowspan="3">Goods.findGoods</td>
@@ -1534,8 +1519,18 @@
 <td>后置条件</td><td>系统显示模糊查找后符合要求的商品列表</td>
 </tr>
 <tr>
+<td rowspan="3">Goods.getGoods</td>
+<td>语法</td> <td> public ResultMessage getGoods(String name,String category);</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>用户选择获取商品信息</td>
+</tr>
+<tr>
+<td>后置条件</td><td>系统显示商品信息</td>
+</tr>
+<tr>
 <td rowspan="3">Goods.deleteGoods</td>
-<td>语法</td> <td> public ResultMessage deleteGoods(String id);</td>
+<td>语法</td> <td> public ResultMessage deleteGoods(String category,String name);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>用户选择删除商品</td>
@@ -1554,18 +1549,8 @@
 <td>后置条件</td><td>系统更新商品信息</td>
 </tr>
 <tr>
-<td rowspan="3">Goods.initAndSaveGoods</td>
-<td>语法</td> <td>public ResultMessage initAndSaveGoods(GoodsVO vo);</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>用户保存已初始化的商品信息</td>
-</tr>
-<tr>
-<td>后置条件</td><td>系统更新商品信息</td>
-</tr>
-<tr>
-<td rowspan="3">Goods.newGoodsCategory</td>
-<td>语法</td> <td>public ResultMessage newGoodsCategory(String category,String node);</td>
+<td rowspan="3">Goods.newGoodsCategoryAutoId</td>
+<td>语法</td> <td>public ResultMessage newGoodsCategoryAutoId(GoodsCategoryVO vo);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>用户选择新建商品分类</td>
@@ -1575,7 +1560,7 @@
 </tr>
 <tr>
 <td rowspan="3">Goods.deleteGoodsCategory</td>
-<td>语法</td> <td>public ResultMessage deleteGoodsCategory(String category);</td>
+<td>语法</td> <td>public ResultMessage deleteGoodsCategory(GoodsCategoryVO vo);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>用户选择删除商品分类</td>
@@ -1585,7 +1570,7 @@
 </tr>
 <tr>
 <td rowspan="3">Goods.modifyGoodsCategory</td>
-<td>语法</td> <td>public ResultMessage modifyGoodsCategory(String category);</td>
+<td>语法</td> <td>public ResultMessage modifyGoodsCategory(GoodsCategoryVO newVO);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>用户选择修改商品分类名称</td>
@@ -1594,14 +1579,24 @@
 <td>后置条件</td><td>系统更新商品分类信息</td>
 </tr>
 <tr>
-<td rowspan="3">Goods.getAllGoodsAndCategory</td>
-<td>语法</td> <td>public TreeVO getAllGoodsAndCategory();</td>
+<td rowspan="3">Goods.getCategory</td>
+<td>语法</td> <td>public List getCategory(String goodsCategoryName,String parentName);</td>
 </tr>
 <tr>
 <td>前置条件</td><td>用户选择查看所有分类和所有商品</td>
 </tr>
 <tr>
-<td>后置条件</td><td>系统显示所有分类和所有商品</td>
+<td>后置条件</td><td>系统显示所有分类和所有商品列表</td>
+</tr>
+<tr>
+<td rowspan="3">Goods.getAllCategory</td>
+<td>语法</td> <td>public List getAllCategory(String node);</td>
+</tr>
+<tr>
+<td>前置条件</td><td>用户选择查看所有分类和所有商品</td>
+</tr>
+<tr>
+<td>后置条件</td><td>系统显示所有分类和所有商品列表</td>
 </tr>
 </table>
 
@@ -1613,13 +1608,17 @@
 <td>服务名</td> <td>服务</td>
 </tr>
 <tr>
-<td>GoodsDataService.newGoods(String name,String category)</td> <td>新建商品</td>
+<td>GoodsDataService.newGoodsID(GoodsVO vo)</td> <td>新建商品</td>
 </tr>
 <tr>
 <td>GoodsDataService.findGoods(String info,String type)</td> <td>模糊查找商品</td>
 </tr>
 <tr>
-<td>GoodsDataService.deleteGoods(String id)</td> 
+<td>GoodsDataService.getGoods(String name,String category)</td> 
+<td>获取商品</td>
+</tr>
+<tr>
+<td>GoodsDataService.deleteGoods(String category,String name)</td> 
 <td>删除商品</td>
 </tr>
 <tr>
@@ -1627,23 +1626,23 @@
 <td>修改商品信息</td>
 </tr>
 <tr>
-<td>GoodsDataService.initAndSaveGoods(GoodsVO vo)</td> 
-<td>初始化并保存商品信息</td>
-</tr>
-<tr>
-<td>GoodsDataService.newGoodsCategory(String category,String node)</td> 
+<td>GoodsDataService.newGoodsCategoryAutoId(GoodsCategoryVO vo)</td> 
 <td>新建商品分类</td>
 </tr>
 <tr>
-<td>GoodsDataService.deleteGoodsCategory(String category)</td> 
+<td>GoodsDataService.deleteGoodsCategory(GoodsCategoryVO vo)</td> 
 <td>删除商品分类</td>
 </tr>
 <tr>
-<td>GoodsDataService.modifyGoodsCategory(String category)</td> 
+<td>GoodsDataService.modifyGoodsCategory(GoodsCategoryVO newVO)</td> 
 <td>修改商品分类名</td>
 </tr>
 <tr>
-<td>GoodsDataService.getAllGoodsAndCategory()</td> 
+<td>GoodsDataService.getCategory(String goodsCategoryName,String parentName)</td> 
+<td>获取商品分类信息</td>
+</tr>
+<tr>
+<td>GoodsDataService.getAllCategory(String node)</td> 
 <td>获取所有商品分类和商品</td>
 </tr>
 </table>
@@ -1852,7 +1851,7 @@ Sale包：
 - StockReturnListItemPO: 商品编号，名称，型号，单价，数量，金额，备注。  
 Goods包：  
 - GoodsPO类包含商品编号、名称、型号、分类、进价、零售价、最近进价、最近零售价。  
-- GoodsCategoryPO类包含商品分类编号，名称，父节点编号，子节点列表，分类下商品列表。  
+- GoodsCategoryPO类包含商品分类编号，名称，父节点名称。  
 Store包：  
 - StorePO类包含商品编号、名称、型号、库存数量、库存均价、批次、批号、出厂日期、警戒数量。  
 - StorePresentListPO类包含单据编号、操作员、审批状态、赠送商品列表。  
