--- a/doc/md/详细设计文档/详细设计文档完整版V1.0.md
+++ b/doc/md/详细设计文档/详细设计文档完整版V1.0.md
@@ -81,14 +81,14 @@ GoodsCategory的接口规范如表4.1.1（3）-3所示。<br/>
 <td colspan ="3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;提供的服务（供接口）</td>
 </tr>
 <tr>
-<td rowspan="3">GoodsBLServiceImpl.newGoods</td>
-<td>语法</td> <td> public String newGoods(String name,String category);</td>
+<td rowspan="3">GoodsBLServiceImpl.newGoodsID</td>
+<td>语法</td> <td> public String newGoodsID(GoodsVO vo);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>用户选择新建商品</td>
 </tr>
 <tr>
-<td>后置条件</td><td>系统显示商品名称和编号</td>
+<td>后置条件</td><td>系统显示商品编号</td>
 </tr>
 <tr>
 <td rowspan="3">GoodsBLServiceImpl.findGoods</td>
@@ -102,7 +102,7 @@ GoodsCategory的接口规范如表4.1.1（3）-3所示。<br/>
 </tr>
 <tr>
 <td rowspan="3">GoodsBLServiceImpl.deleteGoods</td>
-<td>语法</td> <td> public ResultMessage deleteGoods(String id);</td>
+<td>语法</td> <td> public ResultMessage deleteGoods(String category,String name);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>用户选择删除商品</td>
@@ -121,18 +121,8 @@ GoodsCategory的接口规范如表4.1.1（3）-3所示。<br/>
 <td>后置条件</td><td>系统更新商品信息</td>
 </tr>
 <tr>
-<td rowspan="3">GoodsBLServiceImpl.initAndSaveGoods</td>
-<td>语法</td> <td>public ResultMessage initAndSaveGoods(GoodsVO vo);</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>用户保存已初始化的商品信息</td>
-</tr>
-<tr>
-<td>后置条件</td><td>系统更新商品信息</td>
-</tr>
-<tr>
-<td rowspan="3">GoodsBLServiceImpl.newGoodsCategory</td>
-<td>语法</td> <td>public ResultMessage newGoodsCategory(String category,String node);</td>
+<td rowspan="3">GoodsBLServiceImpl.newGoodsCategoryAutoId</td>
+<td>语法</td> <td>public ResultMessage newGoodsCategoryId(GoodsCategoryVO vo);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>用户选择新建商品分类</td>
@@ -142,7 +132,7 @@ GoodsCategory的接口规范如表4.1.1（3）-3所示。<br/>
 </tr>
 <tr>
 <td rowspan="3">GoodsBLServiceImpl.deleteGoodsCategory</td>
-<td>语法</td> <td>public ResultMessage deleteGoodsCategory(String category);</td>
+<td>语法</td> <td>public ResultMessage deleteGoodsCategory(GoodsCategoryVO vo);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>用户选择删除商品分类</td>
@@ -152,7 +142,7 @@ GoodsCategory的接口规范如表4.1.1（3）-3所示。<br/>
 </tr>
 <tr>
 <td rowspan="3">GoodsBLServiceImpl.modifyGoodsCategory</td>
-<td>语法</td> <td>public ResultMessage modifyGoodsCategory(String category);</td>
+<td>语法</td> <td>public ResultMessage modifyGoodsCategory(GoodsCategoryVO newVO);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>用户选择修改商品分类名称</td>
@@ -161,14 +151,24 @@ GoodsCategory的接口规范如表4.1.1（3）-3所示。<br/>
 <td>后置条件</td><td>系统更新商品分类信息</td>
 </tr>
 <tr>
-<td rowspan="3">GoodsBLServiceImpl.getAllGoodsAndCategory</td>
-<td>语法</td> <td>public TreeVO getAllGoodsAndCategory();</td>
+<td rowspan="3">GoodsBLServiceImpl.getCategory</td>
+<td>语法</td> <td>public GoodsCategoryVO getCategory(String goodsCategoryName,String parentName);</td>
 </tr>
 <tr>
-<td>前置条件</td><td>用户选择查看所有分类和所有商品</td>
+<td>前置条件</td><td>用户选择获取分类信息</td>
 </tr>
 <tr>
-<td>后置条件</td><td>系统显示所有分类和所有商品</td>
+<td>后置条件</td><td>系统显示分类信息</td>
+</tr>
+<tr>
+<td rowspan="3">GoodsBLServiceImpl.getAllCategory</td>
+<td>语法</td> <td>public List getAllCategory(String node);</td>
+</tr>
+<tr>
+<td>前置条件</td><td>用户选择查看所有分类</td>
+</tr>
+<tr>
+<td>后置条件</td><td>系统显示所有分类</td>
 </tr>
 </table>
 <table>
@@ -179,13 +179,13 @@ GoodsCategory的接口规范如表4.1.1（3）-3所示。<br/>
 <td>服务名</td> <td>服务</td>
 </tr>
 <tr>
-<td>Goods.newGoods(String name,String category)</td> <td>新建商品</td>
+<td>Goods.newGoodsID(GoodsVO vo)</td> <td>新建商品</td>
 </tr>
 <tr>
 <td>Goods.findGoods(String info,String type)</td> <td>模糊查找商品</td>
 </tr>
 <tr>
-<td>Goods.deleteGoods(String id)</td> 
+<td>Goods.deleteGoods(String category,String name)</td> 
 <td>删除商品</td>
 </tr>
 <tr>
@@ -193,24 +193,24 @@ GoodsCategory的接口规范如表4.1.1（3）-3所示。<br/>
 <td>修改商品信息</td>
 </tr>
 <tr>
-<td>Goods.initAndSaveGoods(GoodsVO vo)</td> 
-<td>初始化并保存商品信息</td>
-</tr>
-<tr>
-<td>GoodsCategory.newGoodsCategory(String category,String node)</td> 
+<td>GoodsCategory.newGoodsCategoryAutoId(GoodsCategoryVO vo)</td> 
 <td>新建商品分类</td>
 </tr>
 <tr>
-<td>GoodsCategory.deleteGoodsCategory(String category)</td> 
+<td>GoodsCategory.deleteGoodsCategory(GoodsCategoryVO vo)</td> 
 <td>删除商品分类</td>
 </tr>
 <tr>
-<td>GoodsCategory.modifyGoodsCategory(String category)</td> 
+<td>GoodsCategory.modifyGoodsCategory(GoodsCategoryVO newVO)</td> 
 <td>修改商品分类名</td>
 </tr>
 <tr>
-<td>GoodsCategory.getAllGoodsAndCategory()</td> 
-<td>获取所有商品分类和商品</td>
+<td>GoodsCategory.getCategory()</td> 
+<td>获取商品分类信息</td>
+</tr>
+<tr>
+<td>GoodsCategory.getAllCategory()</td> 
+<td>获取所有商品分类</td>
 </tr>
 </table>
 
@@ -220,14 +220,14 @@ GoodsCategory的接口规范如表4.1.1（3）-3所示。<br/>
 <td colspan ="3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;提供的服务（供接口）</td>
 </tr>
 <tr>
-<td rowspan="3">Goods.newGoods</td>
-<td>语法</td> <td> public String newGoods(String name,String category);</td>
+<td rowspan="3">Goods.newGoodsID</td>
+<td>语法</td> <td> public String newGoodsID(GoodsVO vo);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>用户选择新建商品</td>
 </tr>
 <tr>
-<td>后置条件</td><td>系统显示商品名称和编号</td>
+<td>后置条件</td><td>系统显示商品编号</td>
 </tr>
 <tr>
 <td rowspan="3">Goods.findGoods</td>
@@ -241,7 +241,7 @@ GoodsCategory的接口规范如表4.1.1（3）-3所示。<br/>
 </tr>
 <tr>
 <td rowspan="3">Goods.deleteGoods</td>
-<td>语法</td> <td> public ResultMessage deleteGoods(String id);</td>
+<td>语法</td> <td> public ResultMessage deleteGoods(String category,String name);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>用户选择删除商品</td>
@@ -259,16 +259,6 @@ GoodsCategory的接口规范如表4.1.1（3）-3所示。<br/>
 <tr>
 <td>后置条件</td><td>系统更新商品信息</td>
 </tr>
-<tr>
-<td rowspan="3">Goods.initAndSaveGoods</td>
-<td>语法</td> <td>public ResultMessage initAndSaveGoods(GoodsVO vo);</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>用户保存已初始化的商品信息</td>
-</tr>
-<tr>
-<td>后置条件</td><td>系统更新商品信息</td>
-</tr>
 </table>
 <table>
 <td colspan = "2">需要的服务（需接口）</td>
@@ -277,22 +267,18 @@ GoodsCategory的接口规范如表4.1.1（3）-3所示。<br/>
 <td>服务名</td> <td>服务</td>
 </tr>
 <tr>
-<td>GoodsDataService.newGoods(String name,String category)</td> <td>新建商品</td>
+<td>GoodsDataService.newGoodsID(GoodsVO vo)</td> <td>新建商品</td>
 </tr>
 <tr>
 <td>GoodsDataService.findGoods(String info,String type)</td> <td>模糊查找商品</td>
 </tr>
 <tr>
-<td>GoodsDataService.deleteGoods(String id)</td> 
+<td>GoodsDataService.deleteGoods(String category,String name)</td> 
 <td>删除商品</td>
 </tr>
 <tr>
 <td>GoodsDataService.modifyGoods(GoodsVO vo)</td> 
 <td>修改商品信息</td>
-</tr>
-<tr>
-<td>GoodsDataService.initAndSaveGoods(GoodsVO vo)</td> 
-<td>初始化并保存商品信息</td>
 </tr>
 </table>
 
@@ -303,8 +289,8 @@ GoodsCategory的接口规范如表4.1.1（3）-3所示。<br/>
 </tr>
 <tr>
 <tr>
-<td rowspan="3">GoodsCategory.newGoodsCategory</td>
-<td>语法</td> <td>public ResultMessage newGoodsCategory(String category,String node);</td>
+<td rowspan="3">GoodsCategory.newGoodsCategoryAutoId</td>
+<td>语法</td> <td>public ResultMessage newGoodsCategoryAutoId(GoodsCategoryVO vo);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>用户选择新建商品分类</td>
@@ -314,7 +300,7 @@ GoodsCategory的接口规范如表4.1.1（3）-3所示。<br/>
 </tr>
 <tr>
 <td rowspan="3">GoodsCategory.deleteGoodsCategory</td>
-<td>语法</td> <td>public ResultMessage deleteGoodsCategory(String category);</td>
+<td>语法</td> <td>public ResultMessage deleteGoodsCategory(GoodsCategoryVO vo);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>用户选择删除商品分类</td>
@@ -324,7 +310,7 @@ GoodsCategory的接口规范如表4.1.1（3）-3所示。<br/>
 </tr>
 <tr>
 <td rowspan="3">GoodsCategory.modifyGoodsCategory</td>
-<td>语法</td> <td>public ResultMessage modifyGoodsCategory(String category);</td>
+<td>语法</td> <td>public ResultMessage modifyGoodsCategory(GoodsCategoryVO newVO);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>用户选择修改商品分类名称</td>
@@ -333,14 +319,24 @@ GoodsCategory的接口规范如表4.1.1（3）-3所示。<br/>
 <td>后置条件</td><td>系统更新商品分类信息</td>
 </tr>
 <tr>
-<td rowspan="3">GoodsCategory.getAllGoodsAndCategory</td>
-<td>语法</td> <td>public TreeVO getAllGoodsAndCategory();</td>
+<td rowspan="3">GoodsCategory.getCategory</td>
+<td>语法</td> <td>public List getCategory();</td>
 </tr>
 <tr>
-<td>前置条件</td><td>用户选择查看所有分类和所有商品</td>
+<td>前置条件</td><td>用户选择查看分类信息</td>
 </tr>
 <tr>
-<td>后置条件</td><td>系统显示所有分类和所有商品</td>
+<td>后置条件</td><td>系统显示分类信息</td>
+</tr>
+<tr>
+<td rowspan="3">GoodsCategory.getAllCategory</td>
+<td>语法</td> <td>public List getAllCategory();</td>
+</tr>
+<tr>
+<td>前置条件</td><td>用户选择查看所有分类</td>
+</tr>
+<tr>
+<td>后置条件</td><td>系统显示所有分类</td>
 </tr>
 </table>
 <table>
@@ -351,20 +347,24 @@ GoodsCategory的接口规范如表4.1.1（3）-3所示。<br/>
 <td>服务名</td> <td>服务</td>
 </tr>
 <tr>
-<td>GoodsDataService.newGoodsCategory(String category,String node)</td> 
+<td>GoodsDataService.newGoodsCategoryAutoId(GoodsCategoryVO vo)</td> 
 <td>新建商品分类</td>
 </tr>
 <tr>
-<td>GoodsDataService.deleteGoodsCategory(String category)</td> 
+<td>GoodsDataService.deleteGoodsCategory(GoodsCategoryVO vo)</td> 
 <td>删除商品分类</td>
 </tr>
 <tr>
-<td>GoodsDataService.modifyGoodsCategory(String category)</td> 
+<td>GoodsDataService.modifyGoodsCategory(GoodsCategoryVO vo)</td> 
 <td>修改商品分类名</td>
 </tr>
 <tr>
-<td>GoodsDataService.getAllGoodsAndCategory()</td> 
-<td>获取所有商品分类和商品</td>
+<td>GoodsDataService.getCategory()</td> 
+<td>获取商品分类信息</td>
+</tr>
+<tr>
+<td>GoodsDataService.getAllCategory()</td> 
+<td>获取所有商品分类</td>
 </tr>
 </table>
 
@@ -410,11 +410,11 @@ GoodsCategory的接口规范如表4.1.1（3）-3所示。<br/>
 ![](https://i.imgur.com/8yJ7A0d.png)
 **图4.1.1（4）-9查看所有分类和商品**<br/>
 
-图4.1.1（4）-10所示的状态图描述Goods对象的生存期间的状态序列、引起转移的事件、以及因状态转移而伴随的动作。随着initAndSaveGoods/newGoods/findGoods/deleteGoods/modifyGoods方法被GoodsBLServiceImpl调用，Goods进入handleData状态；之后通过获取GoodsPO进入Present状态；通过获取ResultMessage进入Complete状态<br/>
+图4.1.1（4）-10所示的状态图描述Goods对象的生存期间的状态序列、引起转移的事件、以及因状态转移而伴随的动作。随着newGoodsId/findGoods/deleteGoods/modifyGoods方法被GoodsBLServiceImpl调用，Goods进入handleData状态；之后通过获取GoodsPO进入Present状态；通过获取ResultMessage进入Complete状态<br/>
 ![](https://i.imgur.com/vslx0e2.png)
 **图4.1.1（4）-10 Goods对象状态图**<br/>
 
-图4.1.1（4）-11所示的状态图描述GoodsCategory对象的生存期间的状态序列、引起转移的事件、以及因状态转移而伴随的动作。随着newGoodsCategory/deleteGoodsCategory/modifyGoodsCategory/getAllGoodsAndCategory方法被GoodsBLServiceImpl调用，GoodsCategory进入handleData状态；之后通过获取GoodsPO进入Present状态；通过获取ResultMessage进入Complete状态<br/>
+图4.1.1（4）-11所示的状态图描述GoodsCategory对象的生存期间的状态序列、引起转移的事件、以及因状态转移而伴随的动作。随着newGoodsCategoryAutoId/deleteGoodsCategory/modifyGoodsCategory/getCategory/getAllCategory方法被GoodsBLServiceImpl调用，GoodsCategory进入handleData状态；之后通过获取GoodsPO进入Present状态；通过获取ResultMessage进入Complete状态<br/>
 ![](https://i.imgur.com/ffh22xW.png)
 **图4.1.1（4）-11 GoodsCategory对象状态图**<br/>  
   
@@ -437,12 +437,10 @@ VIPbl模块的设计如图4.1.2-1 所示
 
 模块 | 职责
 ---|---
-VIPBLServiceImpl | 管理VIPbl各个类的任务
-VIP | 完成对客户信息的增删改查任务
+VIPBLServiceImpl | 完成对客户信息的增删改查的任务
 
 #### （3）模块内部类的接口规范
 VIPBLServiceImpl 的接口规范如表4.1.2（3）-1所示。<br/>
-VIP的接口规范如表4.1.2（3）-2所示。<br/>
 
 表4.1.2（3）-1 VIPBLServiceImpl的接口规范
 <table>
@@ -450,18 +448,28 @@ VIP的接口规范如表4.1.2（3）-2所示。<br/>
 <td colspan ="3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;提供的服务（供接口）</td>
 </tr>
 <tr>
-<td rowspan="3">VIPBLServiceImpl.newGoods</td>
-<td>语法</td> <td> public String newVIP(String telephone);</td>
+<td rowspan="3">VIPBLServiceImpl.newVIPID</td>
+<td>语法</td> <td> public String newVIPID(VIPVO vo);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>用户选择新建客户</td>
 </tr>
 <tr>
-<td>后置条件</td><td>系统显示客户电话和编号</td>
+<td>后置条件</td><td>系统显示客户编号</td>
+</tr>
+<tr>
+<td rowspan="3">VIPBLServiceImpl.getVIP</td>
+<td>语法</td> <td> public VIPVO getVIP(String name);</td>
+</tr>
+<tr>
+<td>前置条件</td> <td>用户选择获取客户信息</td>
+</tr>
+<tr>
+<td>后置条件</td><td>系统显示客户信息</td>
 </tr>
 <tr>
 <td rowspan="3">VIPBLServiceImpl.findVIP</td>
-<td>语法</td> <td> public ArrayList<VIPVO> findVIP(String info,String type);</td>
+<td>语法</td> <td> public List findVIP(String info,String type);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>用户输入信息模糊查找客户</td>
@@ -471,7 +479,7 @@ VIP的接口规范如表4.1.2（3）-2所示。<br/>
 </tr>
 <tr>
 <td rowspan="3">VIPBLServiceImpl.deleteVIP</td>
-<td>语法</td> <td> public ResultMessage deleteVIP(String id);</td>
+<td>语法</td> <td> public ResultMessage deleteVIP(String name);</td>
 </tr>
 <tr>
 <td>前置条件</td> <td>用户选择删除客户</td>
@@ -489,26 +497,6 @@ VIP的接口规范如表4.1.2（3）-2所示。<br/>
 <tr>
 <td>后置条件</td><td>系统更新客户信息</td>
 </tr>
-<tr>
-<td rowspan="3">VIPBLServiceImpl.initAndSaveVIP</td>
-<td>语法</td> <td>public ResultMessage initAndSaveVIP(VIPVO vo);</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>用户保存已初始化的客户信息</td>
-</tr>
-<tr>
-<td>后置条件</td><td>系统更新客户信息</td>
-</tr>
-<tr>
-<td rowspan="3">VIPBLServiceImpl.getVIPInfo</td>
-<td>语法</td> <td>public ArrayList<VIPVO> getVIPInfo();</td>
-</tr>
-<tr>
-<td>前置条件</td><td>用户选择查看所有客户信息</td>
-</tr>
-<tr>
-<td>后置条件</td><td>系统显示所有客户信息</td>
-</tr>
 </table>
 <table>
 <tr>
@@ -518,123 +506,21 @@ VIP的接口规范如表4.1.2（3）-2所示。<br/>
 <td>服务名</td> <td>服务</td>
 </tr>
 <tr>
-<td>VIP.newVIP(String telephone)</td> <td>新建会员</td>
+<td>VIPDataService.newVIPID(VIPVO vo)</td> <td>新建会员</td>
 </tr>
 <tr>
-<td>VIP.findVIP(String info)</td> <td>模糊查找会员</td>
+<td>VIPDataService.getVIP(String name)</td> <td>获取会员信息</td>
 </tr>
 <tr>
-<td>VIP.deleteVIP(String id)</td> 
-<td>删除会员</td>
+<td>VIPDataService.findVIP(String info,String type)</td> <td>模糊查找会员</td>
 </tr>
 <tr>
-<td>VIP.modifyVIP(VIPVO vo)</td> 
-<td>修改会员信息</td>
-</tr>
-<tr>
-<td>VIP.initAndSaveVIP(VIPVO vo)</td> 
-<td>初始化并保存客户信息</td>
-</tr>
-<tr>
-<td>VIP.getVIPInfo()</td> 
-<td>获取所有客户信息</td>
-</tr>
-</table>
-
-表4.1.2（3）-2 VIP 的接口规范
-<table>
-<tr>
-<td colspan ="3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;提供的服务（供接口）</td>
-</tr>
-<tr>
-<td rowspan="3">VIP.newGoods</td>
-<td>语法</td> <td> public String newVIP(String telephone);</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>用户选择新建客户</td>
-</tr>
-<tr>
-<td>后置条件</td><td>系统显示客户电话和编号</td>
-</tr>
-<tr>
-<td rowspan="3">VIP.findVIP</td>
-<td>语法</td> <td> public ArrayList<VIPVO> findVIP(String info,String type);</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>用户输入信息模糊查找客户</td>
-</tr>
-<tr>
-<td>后置条件</td><td>系统显示模糊查找后符合要求的客户列表</td>
-</tr>
-<tr>
-<td rowspan="3">VIP.deleteVIP</td>
-<td>语法</td> <td> public ResultMessage deleteVIP(String id);</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>用户选择删除客户</td>
-</tr>
-<tr>
-<td>后置条件</td><td>系统更新客户列表</td>
-</tr>
-<tr>
-<td rowspan="3">VIP.modifyVIP</td>
-<td>语法</td> <td> public ResultMessage modifyVIP(VIPVO vo);</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>用户选择修改客户信息</td>
-</tr>
-<tr>
-<td>后置条件</td><td>系统更新客户信息</td>
-</tr>
-<tr>
-<td rowspan="3">VIP.initAndSaveVIP</td>
-<td>语法</td> <td>public ResultMessage initAndSaveVIP(VIPVO vo);</td>
-</tr>
-<tr>
-<td>前置条件</td> <td>用户保存已初始化的客户信息</td>
-</tr>
-<tr>
-<td>后置条件</td><td>系统更新客户信息</td>
-</tr>
-<tr>
-<td rowspan="3">VIP.getVIPInfo</td>
-<td>语法</td> <td>public ArrayList<VIPVO> getVIPInfo();</td>
-</tr>
-<tr>
-<td>前置条件</td><td>用户选择查看所有客户信息</td>
-</tr>
-<tr>
-<td>后置条件</td><td>系统显示所有客户信息</td>
-</tr>
-</table>
-<table>
-<tr>
-<td colspan = "2">需要的服务（需接口）</td>
-</tr>
-<tr>
-<td>服务名</td> <td>服务</td>
-</tr>
-<tr>
-<td>VIPDataService.newVIP(String telephone)</td> <td>新建会员</td>
-</tr>
-<tr>
-<td>VIPDataService.findVIP(String info)</td> <td>模糊查找会员</td>
-</tr>
-<tr>
-<td>VIPDataService.deleteVIP(String id)</td> 
+<td>VIPDataService.deleteVIP(String name)</td> 
 <td>删除会员</td>
 </tr>
 <tr>
 <td>VIPDataService.modifyVIP(VIPVO vo)</td> 
 <td>修改会员信息</td>
-</tr>
-<tr>
-<td>VIPDataService.initAndSaveVIP(VIPVO vo)</td> 
-<td>初始化并保存客户信息</td>
-</tr>
-<tr>
-<td>VIPDataService.getVIPInfo()</td> 
-<td>获取所有客户信息</td>
 </tr>
 </table>
 
@@ -643,7 +529,7 @@ VIP的接口规范如表4.1.2（3）-2所示。<br/>
 ![](https://i.imgur.com/wgZ2Vfu.png)
 **图4.1.2（4）-1初始化并保存客户信息**<br/>
 
-图4.1.2（4）-2所示的状态图描述VIP对象的生存期间的状态序列、引起转移的事件、以及因状态转移而伴随的动作。随着initAndSaveVIP/newVIP/VIP/modifyVIP方法被VIPBLServiceImpl调用，VIP进入handleData状态；之后通过获取VIPPO进入Present状态；通过获取ResultMessage进入Complete状态<br/>  
+图4.1.2（4）-2所示的状态图描述VIP对象的生存期间的状态序列、引起转移的事件、以及因状态转移而伴随的动作。随着newVIPID/deleteVIP/modifyVIP方法被VIPBLServiceImpl调用，VIP进入handleData状态；之后通过获取VIPPO进入Present状态；通过获取ResultMessage进入Complete状态<br/>  
 
   
 ![](https://i.imgur.com/qCpY2bb.png)  
